--- a/filta-exam/styles/main.module.scss
+++ b/filta-exam/styles/main.module.scss
@@ -161,3 +161,33 @@
     transform: translateY(0);
   }
 }
+
+.tabs {
+  
+  button {
+    font-size: 2.5rem;
+    font-weight: 800;
+  }
+
+  &__content {
+    margin: 2rem 0;
+    
+    
+    @media (max-width: 750px) {
+      width: 90%;
+      margin: 2rem auto;
+    }
+  }
+
+  @media(max-width: 600px) {
+    display: none;
+  } 
+}
+
+.accordion {
+  display: none;
+
+  @media(max-width: 600px) {
+    display: block;
+  }
+}
